Skoor Juksar ja Roop

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>typer</title>
+    <title>Typer</title>
     <style> 
       * {
         margin: 0;
@@ -21,6 +21,7 @@
     <script src="app.js"></script>
   </head>
   <body>
+	<div id="points">Punktid</div>
     <canvas></canvas>
   </body>
 </html>
